src/ui/lidarr_ui/snapshots/managarr__ui__lidarr_ui__lidarr_ui_tests__tests__snapshot_tests__lidarr_tabs_Blocklist.snap
---
source: src/ui/lidarr_ui/lidarr_ui_tests.rs
expression: output
---
╭  Artists  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Library │ Downloads │ Blocklist │ History │ Root Folders │ Indexers │ System                                                                                      │
│───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│   Artist Name ▼                               Source Title                                                       Quality               Date                       │
│=> Alex                                        Alex - Something                                                   Lossless              2023-05-20 21:29:16 UTC    │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
