src/ui/lidarr_ui/snapshots/managarr__ui__lidarr_ui__lidarr_ui_tests__tests__snapshot_tests__lidarr_tabs_History.snap
---
source: src/ui/lidarr_ui/lidarr_ui_tests.rs
expression: output
---
╭  Artists  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Library │ Downloads │ History │ Root Folders                                                                                                                      │
│───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│   Source Title ▼                                                                Event Type                    Quality             Date                            │
│=> Test source title                                                             grabbed                       Lossless            2023-01-01 00:00:00 UTC         │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
